adding class abstraction for transactions

--- a/BankManager/BankManager.Tests/BankManager.Tests.csproj
+++ b/BankManager/BankManager.Tests/BankManager.Tests.csproj
@@ -54,8 +54,11 @@
   <ItemGroup>
     <Compile Include="AccountRepositoryTests.cs" />
     <Compile Include="BaseTestClass.cs" />
+    <Compile Include="FeeTransactionTests.cs" />
+    <Compile Include="SimpleTransactionTests.cs" />
     <Compile Include="TellerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransactionTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
