--- a/BankManager/BankManager/BankManager.csproj
+++ b/BankManager/BankManager/BankManager.csproj
@@ -53,9 +53,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountRepository.cs" />
+    <Compile Include="FeeTransaction.cs" />
     <Compile Include="Logging.cs" />
+    <Compile Include="SimpleTransaction.cs" />
     <Compile Include="Teller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transaction.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
